# mastactva

./: .gitignore  README.md
ArtefactLuaTests/: ArtefactLuaTests.pro  gtest_dependency.pri  lua_dependency.pri  luaapi.cpp  luaapi.h  main.cpp  tst_installed.h  tst_luaapi.h
MastactavaQuiz/: DescriptionForm.qml  GalleryForm.qml  GalleryFunctions.js  IModel.cpp  IModel.h  Layout.h  MastactavaQuiz.pro  MastactavaQuiz_be_BY.ts  Model.cpp  Model.h  QuestionForm.qml  QuizForm.qml  answer.cpp  answer.h  appconsts.cpp  appconsts.h  gallery.cpp  gallery.h  gallerystatistics.cpp  gallerystatistics.h  image.cpp  image.h  imagedescription.cpp  imagedescription.h  imagepoint.cpp  imagepoint.h  imagesource.h  main.cpp  main.qml  mastactvaapi.cpp  mastactvaapi.h  netapi.cpp  netapi.h  qml.qrc  qmlobjects.cpp  qmlobjects.h  question.cpp  question.h  questionanswer.cpp  questionanswer.h  (+9 more)
MastactvaBase/: IModel.cpp  IModel.h  Layout.h  Model.cpp  Model.h  addon.cpp  addon.h  addonmodule.cpp  addonmodule.h  addonmodulelist.cpp  addonmodulelist.h  addonmodules.cpp  addonmodules.h  appconsts.cpp  appconsts.h  containerutils.cpp  containerutils.h  cquickframebufferobject.cpp  cquickframebufferobject.h  data_utils.cpp  data_utils.h  dbrequestinfo.cpp  dbrequestinfo.h  dbutils.cpp  dbutils.h  default.frag  default.vert  defaulttexturerender.cpp  defaulttexturerender.h  defines.h  drawingdata_utils.cpp  drawingdata_utils.h  dualmodelconfig.cpp  dualmodelconfig.h  format.cpp  format.h  format_type.h  imagesource.cpp  imagesource.h  iquizimageqwindow.h  (+62 more)
MastactvaConfig/: env  lua_dependency.pri
MastactvaData/: MastactvaQuiz_be_BY.qm  mastactva_ro.db3  (+1 more)
listtest/: CMakeLists.txt  galleryeditviewmodel.cpp  galleryeditviewmodel.h  listtest_be_BY.ts  main.cpp  main.qml  mastactvaapi.cpp  mastactvaapi.h  netapi.cpp  netapi.h  qmlmainobjects.cpp  qmlmainobjects.h
(+629 files in other folders)
